--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -13,10 +13,23 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:text="금연을 시작한 날짜를 선택해주세요."
+        android:text="@string/date_select_text"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/cancelView"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/ic_baseline_cancel_24"
+        android:gravity="center"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/datePickerCardView"
@@ -31,7 +44,7 @@
         <DatePicker
             android:id="@+id/datePicker"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="150dp"
             android:calendarViewShown="false"
             android:datePickerMode="spinner" />
 
@@ -45,7 +58,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
-        android:hint="닉네임"
+        android:hint="@string/nick_name"
         app:counterEnabled="true"
         app:counterMaxLength="10"
         app:endIconMode="clear_text"
@@ -76,7 +89,7 @@
         android:layout_marginEnd="24dp"
         android:hint="@string/amount_of_smoking"
         app:counterEnabled="true"
-        app:counterMaxLength="2"
+        app:counterMaxLength="3"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,6 +165,16 @@
             android:textSize="15sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:text="@string/user_widget"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@id/myResolutionTextField"
+        app:layout_constraintTop_toBottomOf="@+id/myResolutionTextField" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/stopSmokingButton"
