--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_background"
-    tools:context=".IntroActivity">
+    tools:context=".activity.IntroActivity">
 
     <TextView
         android:id="@+id/questionTextView"
@@ -13,8 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="잘 참고 계시죠..?"
-        android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textColor="@color/main_color"
+        android:textStyle="bold"
+        android:letterSpacing="0.2"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
