--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="main_color">#80DEEA</color>
+    <color name="main_color">#e45666</color>
     <color name="default_background">#f8f8f8</color>
     <color name="yellow">#FBC02D</color>
 </resources>
